EXT-1741: Improve style of the subtitle to avoid line breaks to add extra spaces

--- a/app-nextjs-starter/src/components/Header.module.css
+++ b/app-nextjs-starter/src/components/Header.module.css
@@ -26,6 +26,7 @@
 }
 
 .header__subtitle {
+  display: flex;
   margin: 0 0 0 2px;
   font-weight: 400;
   letter-spacing: 0.00714em;
